Add User and Order management components; implement user viewing, editing, and deletion features, along with order filtering and status updates